<resources>
    <string name="app_name">Travel App</string>
    <string name="error_default_message">Something went wrong! Please try again.</string>
    <string name="title_home_menu_item">Home</string>
    <string name="title_find_trips_menu_item">Find Trips</string>
    <string name="title_saved_trips_menu_item">Saved Trips</string>
    <string name="title_reservation_menu_item">Reservation</string>
    <string name="title_settings_menu_item">Settings</string>
    <string name="title_my_trips_menu_item">My Trips</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="name_avatar">My Name</string>
    <string name="email_avatar">myemail@gmail.com</string>
    <string name="title_travelers">Travelers</string>
    <string name="title_select_dates">Select dates</string>
    <string name="title_select_location">Select location</string>
    <string name="title_meal_type">Select meal</string>
    <string name="title_restaurant_type">Select restaurant</string>
    <string name="title_destination_front_layout">Explore properties by destination</string>
    <string name="title_traveler_front_layout">Traveler Information</string>
    <string name="title_destination">Aspen, United States</string>
    <string name="title_detail">Detail</string>
    <plurals name="title_properties">
        <item quantity="other">%1$d available properties</item>
    </plurals>
    <plurals name="title_filter_travelers">
        <item quantity="other">%1$d adults, %2$d children</item>
    </plurals>
    <plurals name="title_check_in_steps">
        <item quantity="other"> %1$d/%2$d </item>
    </plurals>
    <string name="title_type">Apartment</string>
    <string name="title_adults">Adults</string>
    <string name="title_children">Children</string>
    <string name="title_count_number">3</string>
    <string name="title_button_apply">Apply</string>
    <string name="title_button_cancel">Cancel</string>
    <string name="title_transition_type_y">translationY</string>
    <string name="title_cost">54$</string>
    <string name="title_restaurant_address">Restaurant in %s</string>
    <string name="title_hotel_address">Hotel in %s</string>
    <string name="title_location_address">Location in %s</string>
    <string name="title_cost_restaurant">54$-60$</string>
    <string name="title_price">Price</string>
    <string name="title_rating">Rating</string>
    <string name="title_sort_by">Sort By</string>
    <string name="title_filter">Filter</string>
    <string name="title_search">Search</string>
    <string name="title_sort_filter">Sort and filter</string>
    <string name="title_max_price">Max Price</string>
    <string name="title_min_rating">Min Rating</string>
    <string name="title_reset">Reset</string>
    <string name="title_current_price">%d$</string>
    <string name="title_max_price_dolar">999$</string>
    <string name="title_five_hundreds_dolar">500$</string>
    <string name="title_current_rating">%d</string>
    <string name="title_five_star">5</string>
    <string name="title_three_star">3</string>
    <string name="title_restaurant_near">Explore restaurants near %s</string>
    <string name="msg_name_hint">Full Name</string>
    <string name="msg_email_hint">Email</string>
    <string name="msg_phone_hint">Phone</string>
    <string name="msg_birth_day_hint">dd/mm/yyyy</string>
    <string name="msg_continue">Continue</string>
    <string name="msg_check_in">Check In</string>
    <string name="title_step">1/3</string>
    <string name="title_view_pager_field">mScroller</string>
</resources>
