<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="Widget.RatingBar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="@dimen/dp_64" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineStart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/dp_72" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineEnd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/dp_72" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:background="@color/color_accent"
        android:gravity="center_vertical"
        android:paddingHorizontal="@dimen/dp_25"
        android:text="@string/title_sort_filter"
        android:textColor="@android:color/white"
        android:textSize="@dimen/sp_20"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guidelineTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewApply"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/color_accent"
        android:gravity="center_vertical|end"
        android:paddingHorizontal="@dimen/dp_25"
        android:text="@string/title_button_apply"
        android:textColor="@android:color/white"
        android:textSize="@dimen/sp_20"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guidelineTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewReset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/dp_16"
        android:layout_marginEnd="@dimen/sp_16"
        android:gravity="center_vertical|end"
        android:text="@string/title_reset"
        android:textColor="@color/color_accent"
        android:textSize="@dimen/sp_24"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBarRating" />

    <TextView
        android:id="@+id/textViewSortBy"
        style="@style/TextTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_25"
        android:text="@string/title_sort_by"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guidelineTitle" />

    <TextView
        android:id="@+id/textViewFilter"
        style="@style/TextTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_25"
        android:text="@string/title_filter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSortBy" />

    <TextView
        android:id="@+id/textViewMaxPrice"
        style="@style/TextTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_25"
        android:layout_marginTop="@dimen/dp_16"
        android:text="@string/title_max_price"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewFilter" />

    <TextView
        android:id="@+id/textViewCurrentPrice"
        style="@style/TextTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_10"
        android:gravity="end"
        android:text="@string/title_five_hundreds_dolar"
        app:layout_constraintEnd_toStartOf="@+id/seekBarPrice"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewMaxPrice" />

    <TextView
        android:id="@+id/textViewPrice"
        style="@style/TextTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginEnd="@dimen/dp_10"
        android:text="@string/title_max_price_dolar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guidelineEnd"
        app:layout_constraintTop_toBottomOf="@+id/textViewMaxPrice" />

    <TextView
        android:id="@+id/textViewMinRating"
        style="@style/TextTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_25"
        android:layout_marginTop="@dimen/dp_48"
        android:text="@string/title_min_rating"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewMaxPrice" />

    <TextView
        android:id="@+id/textViewCurrentRating"
        style="@style/TextTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:drawablePadding="@dimen/dp_1"
        android:gravity="end"
        android:text="@string/title_three_star"
        app:drawableStartCompat="@drawable/ic_star"
        app:layout_constraintEnd_toStartOf="@+id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@+id/textViewMinRating" />

    <TextView
        android:id="@+id/textViewRating"
        style="@style/TextTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginEnd="@dimen/dp_10"
        android:drawablePadding="@dimen/dp_1"
        android:text="@string/title_five_star"
        app:drawableStartCompat="@drawable/ic_star"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guidelineEnd"
        app:layout_constraintTop_toBottomOf="@+id/textViewMinRating" />

    <RadioGroup
        android:id="@+id/radioGroupSort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_25"
        android:checkedButton="@integer/integer_1"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guidelineTitle">

        <RadioButton
            android:id="@+id/radioButtonPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/radio_border_selector"
            android:button="@null"
            android:checked="true"
            android:gravity="center"
            android:padding="@dimen/dp_10"
            android:text="@string/title_price"
            android:textColor="@drawable/radio_color_selector"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/radioButtonRatting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_64"
            android:background="@drawable/radio_border_selector"
            android:button="@null"
            android:gravity="center"
            android:padding="@dimen/dp_10"
            android:text="@string/title_rating"
            android:textColor="@drawable/radio_color_selector"
            android:textStyle="bold" />
    </RadioGroup>

    <SeekBar
        android:id="@+id/seekBarRating"
        style="@style/Widget.AppCompat.SeekBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_8"
        android:layout_marginTop="@dimen/dp_10"
        android:max="@integer/integer_5"
        android:progress="@integer/integer_3"
        app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
        app:layout_constraintStart_toEndOf="@id/textViewCurrentRating"
        app:layout_constraintTop_toBottomOf="@+id/textViewMinRating" />

    <SeekBar
        android:id="@+id/seekBarPrice"
        style="@style/Widget.AppCompat.SeekBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_8"
        android:layout_marginTop="@dimen/dp_10"
        android:max="@integer/integer_999"
        android:progress="@integer/integer_500"
        app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
        app:layout_constraintStart_toStartOf="@+id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@+id/textViewMaxPrice" />

</androidx.constraintlayout.widget.ConstraintLayout>
