<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_accent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarCheckIn"
        style="@style/Widget.TravelApp.Toolbar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_close"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:title="@string/msg_check_in"
        app:titleTextColor="@color/color_primary">

        <ImageView
            android:id="@+id/imageViewStep"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:clickable="true"
            android:paddingLeft="@dimen/dp_16"
            android:paddingRight="@dimen/dp_16"
            android:src="@drawable/ic_step" />

        <TextView
            android:id="@+id/textViewTitleSteps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="@dimen/dp_16"
            android:text="@string/title_step"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:textColor="@color/color_primary"
            android:textStyle="bold" />
    </androidx.appcompat.widget.Toolbar>

    <com.sunasterisk.travelapp.ui.custom.BackdropViewPager
        android:id="@+id/viewPagerMainCheckInContent"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="?attr/actionBarSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/materialButtonContinue"
        style="@style/Widget.TravelApp.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_24"
        android:elevation="@dimen/dp_8"
        android:text="@string/msg_continue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
