<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/dp_16"
    android:layout_marginEnd="@dimen/dp_16"
    android:layout_marginBottom="@dimen/dp_16">

    <ImageView
        android:id="@+id/imageHotelItem"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp_64"
        android:padding="@dimen/dp_8"
        android:scaleType="centerCrop"
        android:src="@drawable/img_destination"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="h,2:3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@null" />

    <TextView
        android:id="@+id/textViewHotelNameItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp_8"
        android:text="@string/title_destination"
        android:textAppearance="?attr/textAppearanceSubtitle2"
        app:layout_constraintStart_toEndOf="@+id/imageHotelItem"
        app:layout_constraintTop_toTopOf="@+id/imageHotelItem" />

    <TextView
        android:id="@+id/textViewTypeItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/dp_8"
        android:paddingEnd="@dimen/dp_8"
        android:text="@string/title_type"
        android:textAppearance="?attr/textAppearanceBody2"
        app:layout_constraintStart_toEndOf="@+id/imageHotelItem"
        app:layout_constraintTop_toBottomOf="@+id/textViewHotelNameItem" />

    <RatingBar
        android:id="@+id/textViewRating"
        style="@style/Widget.AppCompat.RatingBar.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:numStars="5"
        android:progressTint="@color/color_yellow"
        android:rating="2"
        android:theme="@style/RatingBar"
        app:layout_constraintBottom_toBottomOf="@id/textViewTypeItem"
        app:layout_constraintStart_toEndOf="@id/textViewTypeItem"
        app:layout_constraintTop_toTopOf="@+id/textViewTypeItem" />

    <TextView
        android:id="@+id/textViewPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_16"
        android:text="@string/title_cost"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
        android:textColor="@color/color_pink"
        android:textStyle="bold"
        android:typeface="serif"
        app:layout_constraintBottom_toBottomOf="@+id/imageHotelItem"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageHotelItem" />

</androidx.constraintlayout.widget.ConstraintLayout>
