<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.home.hotel.TravelersPickDialogFragment">

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_16"
        android:gravity="start"
        android:text="@string/title_adults"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
        app:layout_constraintEnd_toStartOf="@id/cardViewCounterAdultPick"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewCounterAdultPick"
        android:layout_width="@dimen/dp_72"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_16"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="@dimen/dp_25"
            android:layout_height="@dimen/dp_25"
            android:layout_centerVertical="true"
            android:layout_gravity="start"
            android:contentDescription="@null"
            android:padding="@dimen/dp_6"
            android:src="@drawable/ic_remove"
            app:tint="@android:color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/title_count_number" />

        <ImageView
            android:layout_width="@dimen/dp_25"
            android:layout_height="@dimen/dp_25"
            android:layout_centerVertical="true"
            android:layout_gravity="end"
            android:contentDescription="@null"
            android:padding="@dimen/dp_6"
            android:src="@drawable/ic_add"
            app:tint="@android:color/black" />

    </androidx.cardview.widget.CardView>

    <View
        android:id="@+id/viewDivider"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp_1"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_8"
        android:layout_marginEnd="@dimen/dp_16"
        android:background="@color/color_divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardViewCounterAdultPick" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_16"
        android:gravity="start"
        android:text="@string/title_children"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
        app:layout_constraintEnd_toStartOf="@id/cardViewCounterAdultPick"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewDivider" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewCounterChildrenPick"
        android:layout_width="@dimen/dp_72"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_16"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewDivider">

        <ImageView
            android:layout_width="@dimen/dp_25"
            android:layout_height="@dimen/dp_25"
            android:layout_centerVertical="true"
            android:layout_gravity="start"
            android:contentDescription="@null"
            android:padding="@dimen/dp_6"
            android:src="@drawable/ic_remove"
            app:tint="@android:color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/title_count_number" />

        <ImageView
            android:layout_width="@dimen/dp_25"
            android:layout_height="@dimen/dp_25"
            android:layout_centerVertical="true"
            android:layout_gravity="end"
            android:contentDescription="@null"
            android:padding="@dimen/dp_6"
            android:src="@drawable/ic_add"
            app:tint="@android:color/black" />

    </androidx.cardview.widget.CardView>

    <View
        android:id="@+id/viewDivider2"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp_1"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_8"
        android:layout_marginEnd="@dimen/dp_16"
        android:background="@color/color_divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardViewCounterChildrenPick" />

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.TravelApp.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_16"
        android:layout_marginEnd="@dimen/dp_64"
        android:text="@string/title_button_apply"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewDivider2" />

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_64"
        android:layout_marginTop="@dimen/dp_16"
        android:text="@string/title_button_cancel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewDivider2" />

</androidx.constraintlayout.widget.ConstraintLayout>
